<resources>
    <string name="app_name">GitlApp</string>
    <string name="hint_issue_title">Issue title</string>
    <string name="hint_issue_description">Issue description</string>
    <string name="hint_issue_weight">Issue weight</string>
    <string name="hint_due_date">Due date</string>
    <string name="button_create_issue">create issue</string>
    <string name="show_all_text_button">show all</string>
    <string name="log_in">LogIn</string>
    <string name="label_host_url">Host URL</string>
    <string name="label_userId">Your User ID</string>
    <string name="label_access_token">Access Token</string>
    <string name="hint_host_URL">https://...</string>
    <string name="hint_user_id">Enter your user id here</string>
    <string name="hint_access_token">Put your GitLab token here</string>
    <string name="label_loggedInAs">Logged in as</string>
    <string name="button_remove">Remove</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="issue_due_date">due to %1$s</string>
    <string name="issue_create_date">on %1$s</string>
    <string name="issue_iid"># %1$d</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">login</string>
    <string name="user_id_label">User Id</string>
    <string name="bar_title">%1$s</string>
    <string name="tab_open">open</string>
    <string name="tab_closed">closed</string>
    <string name="tab_all">all</string>
    <string name="add_new_issue">Add new issue</string>
    <string name="project_toolbarTitle">Projects Overview</string>
    <string name="settings_toolbarTitle">Profile Settings</string>
    <string name="no_issue_description_label">no description</string>
    <string name="no_milestone_set_label">milestone not set</string>

</resources>